<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NavyBattle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_against__computer">Against_Computer</string>
    <color name="white">#FFFFFF</color>
    <color name="navy">#000080</color>
    <color name="silver">#C0C0C0</color>
    <color name="Ivory">#FFFFF0</color>
    <string name="ImageCellButton00">Cell00</string>
    <string name="ImageCellButton01">Cell01</string>
    <string name="ImageCellButton02">Cell02</string>
    <string name="ImageCellButton03">Cell03</string>
    <string name="ImageCellButton04">Cell04</string>
    <string name="ImageCellButton05">Cell05</string>
    <string name="ImageCellButton06">Cell06</string>
    <string name="ImageCellButton07">Cell07</string>
    <string name="ImageCellButton08">Cell08</string>
    <string name="ImageCellButton09">Cell09</string>
    <string name="ImageCellButton10">Cell10</string>
    <string name="ImageCellButton11">Cell11</string>
    <string name="ImageCellButton12">Cell12</string>
    <string name="ImageCellButton13">Cell13</string>
    <string name="ImageCellButton14">Cell14</string>
    <string name="ImageCellButton15">Cell15</string>
    <string name="ImageCellButton16">Cell16</string>
    <string name="ImageCellButton17">Cell17</string>
    <string name="ImageCellButton18">Cell18</string>
    <string name="ImageCellButton19">Cell19</string>
    <string name="ImageCellButton20">Cell20</string>
    <string name="ImageCellButton21">Cell21</string>
    <string name="ImageCellButton22">Cell22</string>
    <string name="ImageCellButton23">Cell23</string>
    <string name="ImageCellButton24">Cell24</string>
    <string name="ImageCellButton25">Cell25</string>
    <string name="ImageCellButton26">Cell26</string>
    <string name="ImageCellButton27">Cell27</string>
    <string name="ImageCellButton28">Cell28</string>
    <string name="ImageCellButton29">Cell29</string>
    <string name="ImageCellButton30">Cell30</string>
    <string name="ImageCellButton31">Cell31</string>
    <string name="ImageCellButton32">Cell32</string>
    <string name="ImageCellButton33">Cell33</string>
    <string name="ImageCellButton34">Cell34</string>
    <string name="ImageCellButton35">Cell35</string>
    <string name="ImageCellButton36">Cell36</string>
    <string name="ImageCellButton37">Cell37</string>
    <string name="ImageCellButton38">Cell38</string>
    <string name="ImageCellButton39">Cell39</string>
    <string name="ImageCellButton40">Cell40</string>
    <string name="ImageCellButton41">Cell41</string>
    <string name="ImageCellButton42">Cell42</string>
    <string name="ImageCellButton43">Cell43</string>
    <string name="ImageCellButton44">Cell44</string>
    <string name="ImageCellButton45">Cell45</string>
    <string name="ImageCellButton46">Cell46</string>
    <string name="ImageCellButton47">Cell47</string>
    <string name="ImageCellButton48">Cell48</string>
    <string name="ImageCellButton49">Cell49</string>
    <string name="ImageCellButton50">Cell50</string>
    <string name="ImageCellButton51">Cell51</string>
    <string name="ImageCellButton52">Cell52</string>
    <string name="ImageCellButton53">Cell53</string>
    <string name="ImageCellButton54">Cell54</string>
    <string name="ImageCellButton55">Cell55</string>
    <string name="ImageCellButton56">Cell56</string>
    <string name="ImageCellButton57">Cell57</string>
    <string name="ImageCellButton58">Cell58</string>
    <string name="ImageCellButton59">Cell59</string>
    <string name="ImageCellButton60">Cell60</string>
    <string name="ImageCellButton61">Cell61</string>
    <string name="ImageCellButton62">Cell62</string>
    <string name="ImageCellButton63">Cell63</string>
    <string name="ImageCellButton64">Cell64</string>
    <string name="ImageCellButton65">Cell65</string>
    <string name="ImageCellButton66">Cell66</string>
    <string name="ImageCellButton67">Cell67</string>
    <string name="ImageCellButton68">Cell68</string>
    <string name="ImageCellButton69">Cell69</string>
    <string name="ImageCellButton70">Cell70</string>
    <string name="ImageCellButton71">Cell71</string>
    <string name="ImageCellButton72">Cell72</string>
    <string name="ImageCellButton73">Cell73</string>
    <string name="ImageCellButton74">Cell74</string>
    <string name="ImageCellButton75">Cell75</string>
    <string name="ImageCellButton76">Cell76</string>
    <string name="ImageCellButton77">Cell77</string>
    <string name="ImageCellButton78">Cell78</string>
    <string name="ImageCellButton79">Cell79</string>
    <string name="ImageCellButton80">Cell80</string>
    <string name="ImageCellButton81">Cell81</string>
    <string name="ImageCellButton82">Cell82</string>
    <string name="ImageCellButton83">Cell83</string>
    <string name="ImageCellButton84">Cell84</string>
    <string name="ImageCellButton85">Cell85</string>
    <string name="ImageCellButton86">Cell86</string>
    <string name="ImageCellButton87">Cell87</string>
    <string name="ImageCellButton88">Cell88</string>
    <string name="ImageCellButton89">Cell89</string>
    <string name="ImageCellButton90">Cell90</string>
    <string name="ImageCellButton91">Cell91</string>
    <string name="ImageCellButton92">Cell92</string>
    <string name="ImageCellButton93">Cell93</string>
    <string name="ImageCellButton94">Cell94</string>
    <string name="ImageCellButton95">Cell95</string>
    <string name="ImageCellButton96">Cell96</string>
    <string name="ImageCellButton97">Cell97</string>
    <string name="ImageCellButton98">Cell98</string>
    <string name="ImageCellButton99">Cell99</string>
    <string name="title_activity_against_computer">AgainstComputer</string>
    <string name="Cell">BoardCell</string>
    <string name="MsgArea">Message Area</string>
    <string name="HitMove">You hit! Shoot again!</string>
    <string name="ShipSunk">Woho! Enemy ship was sunk!</string>
    <string name="PlayerWin">You win! Game over!</string>
    <string name="MainMenuBtn">Main Manu Button</string>
    <string name="bButton">New Game Button</string>
    <string name="Button">Button</string>
    <string name="Repeat">Play Again</string>
    <string name="btnShowBoard">Show Open Board</string>
    <string name="exit">Exit Game</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="prefs">Game Preferences</string>
    <string name="opponent">Choose your opponent:</string>
    <string name="vsCPU">Against Computer</string>
    <string name="vsPlayer">2 players (on  the same screen)</string>
    <string name="btnStartGame">Start Game</string>
    <string name="title_activity_two_players">TwoPlayers</string>
    <string name="twoplayers">HERE WILL BE 2 PLAYERS ACTIVITY</string>
    <string name="title_activity_settings">Settings</string>
    <string name="CpuLvl">Difficulty</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="VeryHard">VeryHard</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="title_activity_ship_placement">ShipPlacement</string>
    <string name="EnterCoor">Enter Coordinate for selected ship:</string>
    <string name="aircarrier">aircarrier</string>
    <string name="cruiser">cruiser</string>
    <string name="corvette">corvette</string>
    <string name="patrol_boat">patrol_boat</string>
    <string name="Level">Level:</string>
    <string name="Reverse">Reverse button</string>
    <string name="xffffffff">WHITE</string>
    <string name="stngs_btn">Settings button</string>

</resources>
